--- a/css/styles.css
+++ b/css/styles.css
@@ -226,6 +226,8 @@ img{
     padding: 0;
 }
 .team-item{
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
     background-color: var(--primary-white-color);
     text-align: center;
 }
@@ -304,6 +306,9 @@ img{
 .filter-item{
     margin-right: 8px;
 }
+/* .filter-item:hover, .filter-item:focus{
+    
+} */
 .filter-item:last-child{
     margin-right: 0;
 }
@@ -326,6 +331,7 @@ img{
 }
 .filter-btn:hover,
 .filter-btn:focus{
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
     color: var(--primary-white-color);
     background-color: var(--accent-color);
 }
@@ -341,6 +347,9 @@ img{
 .portfolio-item{
     margin-right: 30px;
     margin-bottom: 30px;
+}
+.portfolio-item:hover, .portfolio-item:focus{
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 .portfolio-item:nth-last-child(-n + 3) {
     margin-bottom: 0;
