--- a/css/styles.css
+++ b/css/styles.css
@@ -398,6 +398,7 @@ img {
   text-transform: uppercase;
   color: var(--primary-white-color);
   margin: 0 0 20px 0;
+  font-weight: 700;
 }
 .social-continer-list {
   display: flex;
